@@ -4,20 +4,18 @@ import com.google.code.kaptcha.Producer;
 import com.zhaozhiguang.component.jwt.JWT;
 import com.zhaozhiguang.component.jwt.algorithms.Algorithm;
 import com.zhaozhiguang.component.security.base.Result;
-import com.zhaozhiguang.component.security.properties.SecurityConstants;
 import com.zhaozhiguang.component.security.util.DateUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.util.DigestUtils;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
-import sun.misc.BASE64Encoder;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -45,8 +43,8 @@ public class CaptchaController {
         ){
             ImageIO.write(image, "png", baos);
             byte[] bytes = baos.toByteArray();//转换成字节
-            BASE64Encoder encoder = new BASE64Encoder();
-            String png_base64 =  "data:image/png;base64," + encoder.encodeBuffer(bytes).trim()
+            Base64.Encoder encoder = Base64.getEncoder();
+            String png_base64 =  "data:image/png;base64," + encoder.encode(bytes).toString().trim()
                     .replaceAll("\n", "").replaceAll("\r", "");//转换成base64串 删除 \r\n
             Map map = new HashMap();
             map.put("captcha", png_base64);
